[tool.poetry]
name = "identifying-spam-using-transformers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
google = "^3.0.0"
transformers = "^4.44.2"
numpy = "<2.0.0"
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"